--- a/bootstrap/bootstrap-grid.css
+++ b/bootstrap/bootstrap-grid.css
@@ -19,6 +19,7 @@ html {
   box-sizing: inherit; }
 
 .container {
+  overflow-x: hidden;
   width: 100%;
   padding-right: 15px;
   padding-left: 15px;
